scroll button fixed, it was staying in DOM while invisible

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -641,7 +641,7 @@ ul {
 #toTop {
     z-index: 999;
     display: none;
-    opacity: 0;
+    // opacity: 0;
     cursor: pointer;
     position: fixed;
     bottom: 3rem;
@@ -651,7 +651,7 @@ ul {
     padding: .45rem .65rem;
     color: white;
     text-decoration: none;
-    transition: all 1s;
+    // transition: all 1s;
 
     &:hover {
         background: $tertiary-color;
